added cover photo

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+  <meta
+      name="image"
+      property="og:image"
+      content="https://media.discordapp.net/attachments/268519610402340864/907236970483298314/cover_photo.jpeg" />
+    <meta
+      name="description"
+      property="og:description"
+      content="AudioCore App" />
+    <meta
+      name="author"
+      content="Vazha Chiaberashvili" />
 </head>
 
 <body>
